--- a/style.css
+++ b/style.css
@@ -426,3 +426,54 @@ hr {
   font-weight: 600;
   line-height: 30px;
 }
+.footer {
+  /* width: 100vw; */
+  padding: 64px 0px 48px 0px;
+  background: #0c111d;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 64px;
+}
+.footer__content-up {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
+.mobile__footer-navigation {
+  display: none ;
+}
+
+.footer__navigation {
+  display: flex;
+  gap: 32px;
+}
+.footer__logo #logo__text-1 {
+  color: #fff;
+}
+.footer__navigation a {
+  color: #eaecf0;
+}
+
+.footer__content-down {
+  padding-top: 32px;
+  display: flex;
+  justify-content: space-between;
+}
+.footer__link {
+  display: flex;
+  gap: 16px;
+}
+#footer__text {
+  font-size: var(--font-size-small);
+  color: #d0d5dd;
+  font-weight: 400;
+  line-height: 24px;
+}
+.footer__link a {
+  font-size: var(--font-size-small);
+  font-weight: 400;
+  line-height: 24px;
+  color: #d0d5dd;
+}
